# nion-cli

./: .gitignore  Cargo.toml  Cargo.toml.txt  README.md  install.sh
.github/workflows/: ci.yml  release.yml
npm/: install.js  package.json
src/: main.rs
src/agent/: mod.rs
src/cli/: mod.rs
src/config/: config_mod.rs.txt  mod.rs
src/providers/: anthropic.rs  cohere.rs  deepseek.rs  google.rs  grok.rs  groq.rs  mistral.rs  mod.rs  openai.rs  perplexity.rs  together.rs
src/session/: mod.rs
src/telegram/: mod.rs  telegram_mod.rs
src/tools/: mod.rs
src/ui/: mod.rs
src/updater/: mod.rs
